y.output
Terminals unused in grammar

   LOWER


状态 1 conflicts: 1 shift/reduce
状态 48 conflicts: 1 shift/reduce
状态 81 conflicts: 1 shift/reduce


语法

    0 $accept: program $end

    1 program: exp

    2 exp: varExp
    3    | nilExp
    4    | intExp
    5    | stringExp
    6    | callExp
    7    | opExp
    8    | recordExp
    9    | seqExp
   10    | assignExp
   11    | ifExp
   12    | whileExp
   13    | forExp
   14    | breakExp
   15    | letExp
   16    | arrayExp

   17 varExp: lvalue

   18 lvalue: ID
   19       | lvalue DOT ID
   20       | lvalue LBRACK exp RBRACK
   21       | ID LBRACK exp RBRACK

   22 nilExp: NIL

   23 intExp: INT

   24 stringExp: STRING

   25 callExp: ID LPAREN argList RPAREN

   26 expList: exp
   27        | exp SEMICOLON expList
   28        | %empty

   29 argList: exp
   30        | exp COMMA argList
   31        | %empty

   32 expseq: expList

   33 opExp: exp PLUS exp
   34      | exp MINUS exp
   35      | exp TIMES exp
   36      | exp DIVIDE exp
   37      | exp EQ exp
   38      | exp NEQ exp
   39      | exp LT exp
   40      | exp LE exp
   41      | exp GT exp
   42      | exp GE exp
   43      | MINUS exp

   44 recordExp: ID LBRACE efieldList RBRACE

   45 efieldList: efield
   46           | efield COMMA efieldList
   47           | %empty

   48 efield: ID EQ exp

   49 seqExp: LPAREN expList RPAREN

   50 assignExp: lvalue ASSIGN exp

   51 ifExp: IF exp THEN exp
   52      | IF exp THEN exp ELSE exp
   53      | exp AND exp
   54      | exp OR exp

   55 whileExp: WHILE exp DO exp

   56 forExp: FOR ID ASSIGN exp TO exp DO exp

   57 breakExp: BREAK

   58 letExp: LET decList IN expseq END

   59 decList: dec
   60        | dec decList

   61 dec: functionDec
   62    | varDec
   63    | typeDec

   64 varDec: VAR ID ASSIGN exp
   65       | VAR ID COLON ID ASSIGN exp

   66 typeDec: TYPE nametyList

   67 nametyList: nametyEntry
   68           | nametyEntry nametyList

   69 nametyEntry: ID EQ ty
   70            | TYPE ID EQ ty

   71 ty: nameTy
   72   | recordTy
   73   | arrayTy

   74 nameTy: ID

   75 recordTy: LBRACE fieldList RBRACE

   76 fieldList: field
   77          | field COMMA fieldList
   78          | %empty

   79 field: ID COLON ID

   80 arrayTy: ARRAY OF ID

   81 functionDec: fundecList

   82 fundecList: fundec
   83           | fundec fundecList

   84 fundec: FUNCTION ID LPAREN fieldList RPAREN EQ exp
   85       | FUNCTION ID LPAREN fieldList RPAREN COLON ID EQ exp

   86 arrayExp: ID LBRACK exp RBRACK OF exp


Terminals, with rules where they appear

$end (0) 0
error (256)
ID (258) 18 19 21 25 44 48 56 64 65 69 70 74 79 80 84 85 86
STRING (259) 24
INT (260) 23
COMMA (261) 30 46 77
COLON (262) 65 79 85
SEMICOLON (263) 27
LPAREN (264) 25 49 84 85
RPAREN (265) 25 49 84 85
LBRACK (266) 20 21 86
RBRACK (267) 20 21 86
LBRACE (268) 44 75
RBRACE (269) 44 75
DOT (270) 19
PLUS (271) 33
MINUS (272) 34 43
TIMES (273) 35
DIVIDE (274) 36
EQ (275) 37 48 69 70 84 85
NEQ (276) 38
LT (277) 39
LE (278) 40
GT (279) 41
GE (280) 42
AND (281) 53
OR (282) 54
ASSIGN (283) 50 56 64 65
ARRAY (284) 80
IF (285) 51 52
THEN (286) 51 52
ELSE (287) 52
WHILE (288) 55
FOR (289) 56
TO (290) 56
DO (291) 55 56
LET (292) 58
IN (293) 58
END (294) 58
OF (295) 80 86
BREAK (296) 57
NIL (297) 22
FUNCTION (298) 84 85
VAR (299) 64 65
TYPE (300) 66 70
LOWER (301)
UMINUS (302)


Nonterminals, with rules where they appear

$accept (48)
    左： 0
program (49)
    左： 1, 右： 0
exp (50)
    左： 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16, 右： 1 20 21 26
    27 29 30 33 34 35 36 37 38 39 40 41 42 43 48 50 51 52 53 54 55
    56 64 65 84 85 86
varExp (51)
    左： 17, 右： 2
lvalue (52)
    左： 18 19 20 21, 右： 17 19 20 50
nilExp (53)
    左： 22, 右： 3
intExp (54)
    左： 23, 右： 4
stringExp (55)
    左： 24, 右： 5
callExp (56)
    左： 25, 右： 6
expList (57)
    左： 26 27 28, 右： 27 32 49
argList (58)
    左： 29 30 31, 右： 25 30
expseq (59)
    左： 32, 右： 58
opExp (60)
    左： 33 34 35 36 37 38 39 40 41 42 43, 右： 7
recordExp (61)
    左： 44, 右： 8
efieldList (62)
    左： 45 46 47, 右： 44 46
efield (63)
    左： 48, 右： 45 46
seqExp (64)
    左： 49, 右： 9
assignExp (65)
    左： 50, 右： 10
ifExp (66)
    左： 51 52 53 54, 右： 11
whileExp (67)
    左： 55, 右： 12
forExp (68)
    左： 56, 右： 13
breakExp (69)
    左： 57, 右： 14
letExp (70)
    左： 58, 右： 15
decList (71)
    左： 59 60, 右： 58 60
dec (72)
    左： 61 62 63, 右： 59 60
varDec (73)
    左： 64 65, 右： 62
typeDec (74)
    左： 66, 右： 63
nametyList (75)
    左： 67 68, 右： 66 68
nametyEntry (76)
    左： 69 70, 右： 67 68
ty (77)
    左： 71 72 73, 右： 69 70
nameTy (78)
    左： 74, 右： 71
recordTy (79)
    左： 75, 右： 72
fieldList (80)
    左： 76 77 78, 右： 75 77 84 85
field (81)
    左： 79, 右： 76 77
arrayTy (82)
    左： 80, 右： 73
functionDec (83)
    左： 81, 右： 61
fundecList (84)
    左： 82 83, 右： 81 83
fundec (85)
    左： 84 85, 右： 82 83
arrayExp (86)
    左： 86, 右： 16


State 0

    0 $accept: . program $end

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    program    转到状态 12
    exp        转到状态 13
    varExp     转到状态 14
    lvalue     转到状态 15
    nilExp     转到状态 16
    intExp     转到状态 17
    stringExp  转到状态 18
    callExp    转到状态 19
    opExp      转到状态 20
    recordExp  转到状态 21
    seqExp     转到状态 22
    assignExp  转到状态 23
    ifExp      转到状态 24
    whileExp   转到状态 25
    forExp     转到状态 26
    breakExp   转到状态 27
    letExp     转到状态 28
    arrayExp   转到状态 29


State 1

   18 lvalue: ID .
   21       | ID . LBRACK exp RBRACK
   25 callExp: ID . LPAREN argList RPAREN
   44 recordExp: ID . LBRACE efieldList RBRACE
   86 arrayExp: ID . LBRACK exp RBRACK OF exp

    LPAREN  shift, and go to state 30
    LBRACK  shift, and go to state 31
    LBRACE  shift, and go to state 32

    LBRACK    [reduce using rule 18 (lvalue)]
    $default  reduce using rule 18 (lvalue)


State 2

   24 stringExp: STRING .

    $default  reduce using rule 24 (stringExp)


State 3

   23 intExp: INT .

    $default  reduce using rule 23 (intExp)


State 4

   49 seqExp: LPAREN . expList RPAREN

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    $default  reduce using rule 28 (expList)

    exp        转到状态 33
    varExp     转到状态 14
    lvalue     转到状态 15
    nilExp     转到状态 16
    intExp     转到状态 17
    stringExp  转到状态 18
    callExp    转到状态 19
    expList    转到状态 34
    opExp      转到状态 20
    recordExp  转到状态 21
    seqExp     转到状态 22
    assignExp  转到状态 23
    ifExp      转到状态 24
    whileExp   转到状态 25
    forExp     转到状态 26
    breakExp   转到状态 27
    letExp     转到状态 28
    arrayExp   转到状态 29


State 5

   43 opExp: MINUS . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp        转到状态 35
    varExp     转到状态 14
    lvalue     转到状态 15
    nilExp     转到状态 16
    intExp     转到状态 17
    stringExp  转到状态 18
    callExp    转到状态 19
    opExp      转到状态 20
    recordExp  转到状态 21
    seqExp     转到状态 22
    assignExp  转到状态 23
    ifExp      转到状态 24
    whileExp   转到状态 25
    forExp     转到状态 26
    breakExp   转到状态 27
    letExp     转到状态 28
    arrayExp   转到状态 29


State 6

   51 ifExp: IF . exp THEN exp
   52      | IF . exp THEN exp ELSE exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp        转到状态 36
    varExp     转到状态 14
    lvalue     转到状态 15
    nilExp     转到状态 16
    intExp     转到状态 17
    stringExp  转到状态 18
    callExp    转到状态 19
    opExp      转到状态 20
    recordExp  转到状态 21
    seqExp     转到状态 22
    assignExp  转到状态 23
    ifExp      转到状态 24
    whileExp   转到状态 25
    forExp     转到状态 26
    breakExp   转到状态 27
    letExp     转到状态 28
    arrayExp   转到状态 29


State 7

   55 whileExp: WHILE . exp DO exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp        转到状态 37
    varExp     转到状态 14
    lvalue     转到状态 15
    nilExp     转到状态 16
    intExp     转到状态 17
    stringExp  转到状态 18
    callExp    转到状态 19
    opExp      转到状态 20
    recordExp  转到状态 21
    seqExp     转到状态 22
    assignExp  转到状态 23
    ifExp      转到状态 24
    whileExp   转到状态 25
    forExp     转到状态 26
    breakExp   转到状态 27
    letExp     转到状态 28
    arrayExp   转到状态 29


State 8

   56 forExp: FOR . ID ASSIGN exp TO exp DO exp

    ID  shift, and go to state 38


State 9

   58 letExp: LET . decList IN expseq END

    FUNCTION  shift, and go to state 39
    VAR       shift, and go to state 40
    TYPE      shift, and go to state 41

    decList      转到状态 42
    dec          转到状态 43
    varDec       转到状态 44
    typeDec      转到状态 45
    functionDec  转到状态 46
    fundecList   转到状态 47
    fundec       转到状态 48


State 10

   57 breakExp: BREAK .

    $default  reduce using rule 57 (breakExp)


State 11

   22 nilExp: NIL .

    $default  reduce using rule 22 (nilExp)


State 12

    0 $accept: program . $end

    $end  shift, and go to state 49


State 13

    1 program: exp .
   33 opExp: exp . PLUS exp
   34      | exp . MINUS exp
   35      | exp . TIMES exp
   36      | exp . DIVIDE exp
   37      | exp . EQ exp
   38      | exp . NEQ exp
   39      | exp . LT exp
   40      | exp . LE exp
   41      | exp . GT exp
   42      | exp . GE exp
   53 ifExp: exp . AND exp
   54      | exp . OR exp

    PLUS    shift, and go to state 50
    MINUS   shift, and go to state 51
    TIMES   shift, and go to state 52
    DIVIDE  shift, and go to state 53
    EQ      shift, and go to state 54
    NEQ     shift, and go to state 55
    LT      shift, and go to state 56
    LE      shift, and go to state 57
    GT      shift, and go to state 58
    GE      shift, and go to state 59
    AND     shift, and go to state 60
    OR      shift, and go to state 61

    $default  reduce using rule 1 (program)


State 14

    2 exp: varExp .

    $default  reduce using rule 2 (exp)


State 15

   17 varExp: lvalue .
   19 lvalue: lvalue . DOT ID
   20       | lvalue . LBRACK exp RBRACK
   50 assignExp: lvalue . ASSIGN exp

    LBRACK  shift, and go to state 62
    DOT     shift, and go to state 63
    ASSIGN  shift, and go to state 64

    $default  reduce using rule 17 (varExp)


State 16

    3 exp: nilExp .

    $default  reduce using rule 3 (exp)


State 17

    4 exp: intExp .

    $default  reduce using rule 4 (exp)


State 18

    5 exp: stringExp .

    $default  reduce using rule 5 (exp)


State 19

    6 exp: callExp .

    $default  reduce using rule 6 (exp)


State 20

    7 exp: opExp .

    $default  reduce using rule 7 (exp)


State 21

    8 exp: recordExp .

    $default  reduce using rule 8 (exp)


State 22

    9 exp: seqExp .

    $default  reduce using rule 9 (exp)


State 23

   10 exp: assignExp .

    $default  reduce using rule 10 (exp)


State 24

   11 exp: ifExp .

    $default  reduce using rule 11 (exp)


State 25

   12 exp: whileExp .

    $default  reduce using rule 12 (exp)


State 26

   13 exp: forExp .

    $default  reduce using rule 13 (exp)


State 27

   14 exp: breakExp .

    $default  reduce using rule 14 (exp)


State 28

   15 exp: letExp .

    $default  reduce using rule 15 (exp)


State 29

   16 exp: arrayExp .

    $default  reduce using rule 16 (exp)


State 30

   25 callExp: ID LPAREN . argList RPAREN

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    $default  reduce using rule 31 (argList)

    exp        转到状态 65
    varExp     转到状态 14
    lvalue     转到状态 15
    nilExp     转到状态 16
    intExp     转到状态 17
    stringExp  转到状态 18
    callExp    转到状态 19
    argList    转到状态 66
    opExp      转到状态 20
    recordExp  转到状态 21
    seqExp     转到状态 22
    assignExp  转到状态 23
    ifExp      转到状态 24
    whileExp   转到状态 25
    forExp     转到状态 26
    breakExp   转到状态 27
    letExp     转到状态 28
    arrayExp   转到状态 29


State 31

   21 lvalue: ID LBRACK . exp RBRACK
   86 arrayExp: ID LBRACK . exp RBRACK OF exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp        转到状态 67
    varExp     转到状态 14
    lvalue     转到状态 15
    nilExp     转到状态 16
    intExp     转到状态 17
    stringExp  转到状态 18
    callExp    转到状态 19
    opExp      转到状态 20
    recordExp  转到状态 21
    seqExp     转到状态 22
    assignExp  转到状态 23
    ifExp      转到状态 24
    whileExp   转到状态 25
    forExp     转到状态 26
    breakExp   转到状态 27
    letExp     转到状态 28
    arrayExp   转到状态 29


State 32

   44 recordExp: ID LBRACE . efieldList RBRACE

    ID  shift, and go to state 68

    $default  reduce using rule 47 (efieldList)

    efieldList  转到状态 69
    efield      转到状态 70


State 33

   26 expList: exp .
   27        | exp . SEMICOLON expList
   33 opExp: exp . PLUS exp
   34      | exp . MINUS exp
   35      | exp . TIMES exp
   36      | exp . DIVIDE exp
   37      | exp . EQ exp
   38      | exp . NEQ exp
   39      | exp . LT exp
   40      | exp . LE exp
   41      | exp . GT exp
   42      | exp . GE exp
   53 ifExp: exp . AND exp
   54      | exp . OR exp

    SEMICOLON  shift, and go to state 71
    PLUS       shift, and go to state 50
    MINUS      shift, and go to state 51
    TIMES      shift, and go to state 52
    DIVIDE     shift, and go to state 53
    EQ         shift, and go to state 54
    NEQ        shift, and go to state 55
    LT         shift, and go to state 56
    LE         shift, and go to state 57
    GT         shift, and go to state 58
    GE         shift, and go to state 59
    AND        shift, and go to state 60
    OR         shift, and go to state 61

    $default  reduce using rule 26 (expList)


State 34

   49 seqExp: LPAREN expList . RPAREN

    RPAREN  shift, and go to state 72


State 35

   33 opExp: exp . PLUS exp
   34      | exp . MINUS exp
   35      | exp . TIMES exp
   36      | exp . DIVIDE exp
   37      | exp . EQ exp
   38      | exp . NEQ exp
   39      | exp . LT exp
   40      | exp . LE exp
   41      | exp . GT exp
   42      | exp . GE exp
   43      | MINUS exp .
   53 ifExp: exp . AND exp
   54      | exp . OR exp

    $default  reduce using rule 43 (opExp)


State 36

   33 opExp: exp . PLUS exp
   34      | exp . MINUS exp
   35      | exp . TIMES exp
   36      | exp . DIVIDE exp
   37      | exp . EQ exp
   38      | exp . NEQ exp
   39      | exp . LT exp
   40      | exp . LE exp
   41      | exp . GT exp
   42      | exp . GE exp
   51 ifExp: IF exp . THEN exp
   52      | IF exp . THEN exp ELSE exp
   53      | exp . AND exp
   54      | exp . OR exp

    PLUS    shift, and go to state 50
    MINUS   shift, and go to state 51
    TIMES   shift, and go to state 52
    DIVIDE  shift, and go to state 53
    EQ      shift, and go to state 54
    NEQ     shift, and go to state 55
    LT      shift, and go to state 56
    LE      shift, and go to state 57
    GT      shift, and go to state 58
    GE      shift, and go to state 59
    AND     shift, and go to state 60
    OR      shift, and go to state 61
    THEN    shift, and go to state 73


State 37

   33 opExp: exp . PLUS exp
   34      | exp . MINUS exp
   35      | exp . TIMES exp
   36      | exp . DIVIDE exp
   37      | exp . EQ exp
   38      | exp . NEQ exp
   39      | exp . LT exp
   40      | exp . LE exp
   41      | exp . GT exp
   42      | exp . GE exp
   53 ifExp: exp . AND exp
   54      | exp . OR exp
   55 whileExp: WHILE exp . DO exp

    PLUS    shift, and go to state 50
    MINUS   shift, and go to state 51
    TIMES   shift, and go to state 52
    DIVIDE  shift, and go to state 53
    EQ      shift, and go to state 54
    NEQ     shift, and go to state 55
    LT      shift, and go to state 56
    LE      shift, and go to state 57
    GT      shift, and go to state 58
    GE      shift, and go to state 59
    AND     shift, and go to state 60
    OR      shift, and go to state 61
    DO      shift, and go to state 74


State 38

   56 forExp: FOR ID . ASSIGN exp TO exp DO exp

    ASSIGN  shift, and go to state 75


State 39

   84 fundec: FUNCTION . ID LPAREN fieldList RPAREN EQ exp
   85       | FUNCTION . ID LPAREN fieldList RPAREN COLON ID EQ exp

    ID  shift, and go to state 76


State 40

   64 varDec: VAR . ID ASSIGN exp
   65       | VAR . ID COLON ID ASSIGN exp

    ID  shift, and go to state 77


State 41

   66 typeDec: TYPE . nametyList

    ID    shift, and go to state 78
    TYPE  shift, and go to state 79

    nametyList   转到状态 80
    nametyEntry  转到状态 81


State 42

   58 letExp: LET decList . IN expseq END

    IN  shift, and go to state 82


State 43

   59 decList: dec .
   60        | dec . decList

    FUNCTION  shift, and go to state 39
    VAR       shift, and go to state 40
    TYPE      shift, and go to state 41

    $default  reduce using rule 59 (decList)

    decList      转到状态 83
    dec          转到状态 43
    varDec       转到状态 44
    typeDec      转到状态 45
    functionDec  转到状态 46
    fundecList   转到状态 47
    fundec       转到状态 48


State 44

   62 dec: varDec .

    $default  reduce using rule 62 (dec)


State 45

   63 dec: typeDec .

    $default  reduce using rule 63 (dec)


State 46

   61 dec: functionDec .

    $default  reduce using rule 61 (dec)


State 47

   81 functionDec: fundecList .

    $default  reduce using rule 81 (functionDec)


State 48

   82 fundecList: fundec .
   83           | fundec . fundecList

    FUNCTION  shift, and go to state 39

    FUNCTION  [reduce using rule 82 (fundecList)]
    $default  reduce using rule 82 (fundecList)

    fundecList  转到状态 84
    fundec      转到状态 48


State 49

    0 $accept: program $end .

    $default  接受


State 50

   33 opExp: exp PLUS . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp        转到状态 85
    varExp     转到状态 14
    lvalue     转到状态 15
    nilExp     转到状态 16
    intExp     转到状态 17
    stringExp  转到状态 18
    callExp    转到状态 19
    opExp      转到状态 20
    recordExp  转到状态 21
    seqExp     转到状态 22
    assignExp  转到状态 23
    ifExp      转到状态 24
    whileExp   转到状态 25
    forExp     转到状态 26
    breakExp   转到状态 27
    letExp     转到状态 28
    arrayExp   转到状态 29


State 51

   34 opExp: exp MINUS . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp        转到状态 86
    varExp     转到状态 14
    lvalue     转到状态 15
    nilExp     转到状态 16
    intExp     转到状态 17
    stringExp  转到状态 18
    callExp    转到状态 19
    opExp      转到状态 20
    recordExp  转到状态 21
    seqExp     转到状态 22
    assignExp  转到状态 23
    ifExp      转到状态 24
    whileExp   转到状态 25
    forExp     转到状态 26
    breakExp   转到状态 27
    letExp     转到状态 28
    arrayExp   转到状态 29


State 52

   35 opExp: exp TIMES . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11
